--- a/account.html
+++ b/account.html
@@ -22,7 +22,7 @@
 
         <link href="css/vegas.min.css" rel="stylesheet">
 
-        <link href="css/tooplate-barista.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
 		
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbhHCHLWoptgAYwsd1ywL6dhuxvHlVEdM&libraries=places"></script>
 
@@ -51,14 +51,14 @@
                             <a class="nav-link" href="index.html#section_3">Coffee</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#section_4">Testimonials</a>
+                            <a class="nav-link" href="index.html#section_4">Reviews</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="index.html#section_5">Contact</a>
                         </li>
                     </ul>
                     <div class="ms-lg-3">
-                        <a class="btn custom-btn custom-border-btn" href="account.html">
+                        <a class="btn custom-btn custom-border-btn" href="login.html">
                             Account Login
                             <i class="bi-arrow-up-right ms-2"></i>
                         </a>
@@ -90,7 +90,7 @@
                                                     <input type="email" name="booking-form-email" id="booking-form-email" class="form-control" placeholder="Email" required="">
                                                 </div>
                                                 <div class="col-lg-6 col-12">
-                                                    <input type="tel" class="form-control" name="booking-form-phone" placeholder="Phone: 555-222-1212" pattern="^\([0-9]{3}\)[0-9]{3}-[0-9]{4}$" title="Enter phone number in the format (XXX)XXX-XXXX, XXX-XXX-XXXX, or XXXXXXXXXX" >
+                                                    <input type="tel" class="form-control" name="booking-form-phone" placeholder="Phone: 555-222-1212" title="Enter phone number in the format (XXX)XXX-XXXX, XXX-XXX-XXXX, or XXXXXXXXXX" >
                                                 </div>
                                                 <div class="col-lg-6 col-12">
                                                     <input type="number" name="booking-form-number" id="booking-form-number" class="form-control" placeholder="Age" required="">
