--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <link href="css/vegas.min.css" rel="stylesheet">
 
-        <link href="css/tooplate-barista.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
         
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbhHCHLWoptgAYwsd1ywL6dhuxvHlVEdM&libraries=places"></script>
 
@@ -112,7 +112,7 @@
                             <div class="col-lg-6 col-12">
                                 <div class="ratio ratio-1x1">
                                     <video autoplay="" loop="" muted="" class="custom-video" poster="">
-                                        <source src="videos/pexels-mike-jones-9046237.mp4" type="video/mp4">
+                                        <source src="videos/cafe_video.mp4" type="video/mp4">
 
                                         Your browser does not support the video tag.
                                     </video>
@@ -277,7 +277,7 @@
                             <div class="col-lg-12 col-12 text-center mb-4 pb-lg-2">
                                 <em class="text-white">Reviews by Our Customers</em>
 
-                                <h2 class="text-white">Testimonials</h2>
+                                <h2 class="text-white">Reviews</h2>
                             </div>
 
                             <div class="timeline">
