--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                                 <li class="nav-item">
                                     <a class="nav-link click-scroll" href="#section_5">Contact</a>
                                 </li>
+								
+								<li class="nav-item">
+                                    <a class="nav-link click-scroll" href="products.html">Products</a>
+                                </li>
                             </ul>
 
                             <div class="ms-lg-3">
