--- a/shipping.html
+++ b/shipping.html
@@ -52,7 +52,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
         
-                    <div class="collapse navbar-collapse" id="navbarNav">
+                    <!--<div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-lg-auto">
                             <li class="nav-item">
                                 <a class="nav-link click-scroll" href="#section_1">Home</a>
@@ -84,7 +84,7 @@
                             Sign-in / Register
                             <i class="bi-arrow-up-right ms-2"></i>
                         </a>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </nav>
