--- a/cart.html
+++ b/cart.html
@@ -68,7 +68,7 @@
                 <input type="text" id="search-product" class="form-control" placeholder="Search Product ID">
                 <button id="add-to-cart" class="btn btn-primary mt-2">Add to Cart</button>
             </div>
-			<button id="submit-cart" class="btn btn-success mt-3">Proceed to Payment</button> </div>
+			<button id="proceed-to-payment" class="btn btn-success mt-3">Proceed to Payment</button> </div>
         </div>
     </main>
     <script src="js/jquery.min.js"></script>
