--- a/shipping.html
+++ b/shipping.html
@@ -181,7 +181,7 @@
             <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
           </div>
           <BR>
-          <div class="col-12">
+          <!--<div class="col-12">
                 <label for="shipping-services" class="form-label">Shipping Services</label>
                 <select class="form-select" id="shipping-services" ng-model="shippingData.selectedShippingCost" required ng-change="updateShippingCost()">
                     <option value="">Choose...</option>
@@ -251,7 +251,7 @@
                 Security code required
               </div>
             </div>
-          </div>
+          </div>-->
 
           <hr class="my-4">
 
