--- a/shipping.html
+++ b/shipping.html
@@ -164,7 +164,7 @@
 
           <div class="form-check">
             <input type="checkbox" class="form-check-input" id="same-address" ng-model="shippingData.sameAddress">
-            <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
+            <label class="form-check-label" for="same-address">Billing address is the same as my shipping address</label>
           </div>
           <BR>
           <!--<div class="col-12">
