--- a/returns.html
+++ b/returns.html
@@ -72,12 +72,12 @@
     </div>
 
     <div class="container text-center retProductInfo">
-        <div class="row align-items-center">
+        <div class="row align-items-center" style="height: 200px;">
           <div class="col-md-3">
-            Product Image
+            <img src="images/products/soon.jpg" alt="Product Image">
           </div>
           <div class="col-md-6">
-            Product Name
+            <h4><strong>Product Name</strong></h4>
           </div>
           <div class="col-md-3">
             Product Price
