--- a/returns.html
+++ b/returns.html
@@ -23,7 +23,8 @@
             border: 1px solid grey;
         }
         .retProductInfo img {
-            height: 199px;
+            height: 195px;
+            margin: auto;
         }
         .input-group {
             width: 400px;
