--- a/returns.html
+++ b/returns.html
@@ -75,7 +75,7 @@
     <div class="container text-center retProductInfo">
         <div class="row align-items-center" style="height: 200px;">
           <div class="col-md-3">
-            <img src="images/products/soon.jpg" alt="Product Image">
+            <img src="images/coffee-beans.png" alt="Product Image">
           </div>
           <div class="col-md-6">
             <h4><strong>Product Name</strong></h4>
