--- a/returns.html
+++ b/returns.html
@@ -23,7 +23,7 @@
             border: 1px solid grey;
         }
         .retProductInfo img {
-            height: 195px;
+            height: 190px;
             margin: auto;
         }
         .input-group {
@@ -38,7 +38,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="images/coffee-beans.png" class="navbar-brand-image img-fluid" alt="Barista Cafe Template">
+                <img src="images/products/soon.jpg" class="navbar-brand-image img-fluid" alt="Barista Cafe Template">
                 Jamaican Blue Mountain Coffee
             </a>
 
