--- a/returns.html
+++ b/returns.html
@@ -38,7 +38,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="images/products/soon.jpg" class="navbar-brand-image img-fluid" alt="Barista Cafe Template">
+                <img src="images/coffee-beans.png" class="navbar-brand-image img-fluid" alt="Barista Cafe Template">
                 Jamaican Blue Mountain Coffee
             </a>
 
@@ -75,7 +75,7 @@
     <div class="container text-center retProductInfo">
         <div class="row align-items-center" style="height: 200px;">
           <div class="col-md-3">
-            <img src="images/coffee-beans.png" alt="Product Image">
+            <img src="images/products/soon.jog" alt="Product Image">
           </div>
           <div class="col-md-6">
             <h4><strong>Product Name</strong></h4>
