--- a/public/billing.html
+++ b/public/billing.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en" ng-app="shippingApp" ng-controller="shippingController">
 <head>
@@ -7,17 +6,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Kingston Coffee</title>
+    <title>Kingston Coffee - Billing Information</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,400;0,600;0,700;1,200;1,700&display=swap" rel="stylesheet">
     <link href="css/bootstrap-icons.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-<!--     <link href="css/cart.css" rel="stylesheet"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="css/form-validation.css" rel="stylesheet">
- 
+
 </head>
 
 <body class="bg-light">
@@ -35,7 +33,6 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-lg-auto">
-
                     <li class="nav-item">
                         <a class="nav-link click-scroll" href="cart.html">Back to Cart</a>
                     </li>
@@ -68,7 +65,7 @@
         <ul class="list-group mb-3">
           <li class="list-group-item d-flex justify-content-between lh-sm" ng-repeat="item in cart">
             <div class="d-flex align-items-center">
-              <img ng-src="{{item.thumbnail}}" alt="{{item.name}}" style="width: 50px; height: 50px; margin-right: 10px;">
+              <img ng-src="{{item.productThumbnail || 'images/products/soon.jpg'}}" alt="{{item.name || 'Product Image'}}" style="width: 50px; height: 50px; margin-right: 10px;">
               <div>
                 <h6 class="my-0">{{item.name}}</h6>
                 <small class="text-muted">Quantity: {{item.quantity}}</small>
@@ -81,8 +78,8 @@
             <strong>{{subtotal | currency}}</strong>
           </li>
           <li class="list-group-item d-flex justify-content-between">
-            <span>Shipping</span>
-            <strong>{{shippingCost | currency}}</strong>
+            <span>Estimated Shipping</span>
+            <strong>To be determined on next page</strong>
           </li>
           <li class="list-group-item d-flex justify-content-between">
             <span>Total (USD)</span>
@@ -92,11 +89,11 @@
       </div>
       <div class="col-md-7 col-lg-8">
         <h4 class="mb-3">Billing address</h4>
-        <form class="needs-validation" novalidate ng-submit="saveShippingInfo()">
+        <form class="needs-validation" novalidate ng-submit="saveBillingInfo()">
           <div class="row g-3">
             <div class="col-sm-6">
               <label for="firstName" class="form-label">First name</label>
-              <input type="text" class="form-control" id="firstName" placeholder="" value="" required ng-model="shippingData.firstName">
+              <input type="text" class="form-control" id="firstName" placeholder="" value="" required ng-model="billingData.firstName">
               <div class="invalid-feedback">
                 Valid first name is required.
               </div>
@@ -104,23 +101,15 @@
 
             <div class="col-sm-6">
               <label for="lastName" class="form-label">Last name</label>
-              <input type="text" class="form-control" id="lastName" placeholder="" value="" required ng-model="shippingData.lastName">
+              <input type="text" class="form-control" id="lastName" placeholder="" value="" required ng-model="billingData.lastName">
               <div class="invalid-feedback">
                 Valid last name is required.
               </div>
             </div>
 
-            <!-- <div class="col-12">
-              <label for="email" class="form-label">Email <span class="text-muted"></span></label>
-              <input type="email" class="form-control" id="email" placeholder="you@example.com" required ng-model="shippingData.email">
-              <div class="invalid-feedback">
-                Please enter a valid email address for shipping updates.
-              </div>
-            </div> -->
-
             <div class="col-12">
               <label for="address" class="form-label">Address</label>
-              <input type="text" class="form-control" id="address" placeholder="1234 Main St" required ng-model="shippingData.address">
+              <input type="text" class="form-control" id="address" placeholder="1234 Main St" required ng-model="billingData.address">
               <div class="invalid-feedback">
                 Please enter your billing address.
               </div>
@@ -128,12 +117,12 @@
 
             <div class="col-12">
               <label for="address2" class="form-label">Address 2 <span class="text-muted">(Optional)</span></label>
-              <input type="text" class="form-control" id="address2" placeholder="Apartment or suite" ng-model="shippingData.address2">
+              <input type="text" class="form-control" id="address2" placeholder="Apartment or suite" ng-model="billingData.address2">
             </div>
 
             <div class="col-md-5">
               <label for="country" class="form-label">Country</label>
-              <select class="form-select" id="country" required ng-model="shippingData.country">
+              <select class="form-select" id="country" required ng-model="billingData.country">
                 <option value="">Choose...</option>
                 <option value="United States">United States</option>
               </select>
@@ -144,7 +133,7 @@
 
             <div class="col-md-4">
               <label for="state" class="form-label">State</label>
-              <select class="form-select" id="state" required ng-model="shippingData.state">
+              <select class="form-select" id="state" required ng-model="billingData.state">
                 <option value="">Choose...</option>
                 <option value="California">California</option>
               </select>
@@ -155,7 +144,7 @@
 
             <div class="col-md-3">
               <label for="zip" class="form-label">Zip</label>
-              <input type="text" class="form-control" id="zip" placeholder="" required ng-model="shippingData.zip">
+              <input type="text" class="form-control" id="zip" placeholder="" required ng-model="billingData.zip">
               <div class="invalid-feedback">
                 Zip code required.
               </div>
@@ -164,180 +153,83 @@
 
           <hr class="my-4">
 
-          <!-- <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="same-address" ng-model="shippingData.sameAddress">
-            <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
-          </div> -->
-          <BR>
-          <div class="col-12">
-                <label for="shipping-services" class="form-label">Shipping Services</label>
-                <select class="form-select" id="shipping-services" ng-model="shippingData.selectedShippingCost" required ng-change="updateShippingCost()">
-                    <option value="">Choose...</option>
-                    <option value="9.99">UPS Ground</option>
-                    <option value="29.99">UPS 2nd Day</option>
-                    <option value="49.99">UPS Next Day</option>
-                </select>
-				<div class="invalid-feedback">
-                Shipping service required.
-              </div>
-          </div>
-
-          <div id="shipping-cost" class="mt-3">
-                <p><strong>Shipping Cost:</strong> {{shippingCost | currency}}</p>
-          </div>
-
-
-          <hr class="my-4">
-
-          <h4 class="mb-3">Payment</h4>
-
-          <div class="my-3">
-            <div class="form-check">
-              <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required ng-model="shippingData.paymentMethod" value="credit">
-              <label class="form-check-label" for="credit">Credit card</label>
-            </div>
-            <div class="form-check">
-              <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required ng-model="shippingData.paymentMethod" value="debit">
-              <label class="form-check-label" for="debit">Debit card</label>
-            </div>
-            <div class="form-check">
-              <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required ng-model="shippingData.paymentMethod" value="paypal">
-              <label class="form-check-label" for="paypal">PayPal</label>
-            </div>
-          </div>
-
-          <div class="row gy-3">
-            <div class="col-md-6">
-              <label for="cc-name" class="form-label">Name on card</label>
-              <input type="text" class="form-control" id="cc-name" placeholder="" required ng-model="shippingData.ccName">
-              <small class="text-muted">Full name as displayed on card</small>
-              <div class="invalid-feedback">
-                Name on card is required
-              </div>
-            </div>
-
-            <div class="col-md-6">
-              <label for="cc-number" class="form-label">Credit card number</label>
-              <input type="text" class="form-control" id="cc-number" placeholder="" required ng-model="shippingData.ccNumber">
-              <div class="invalid-feedback">
-                Credit card number is required
-              </div>
-            </div>
-
-            <div class="col-md-3">
-              <label for="cc-expiration" class="form-label">Expiration</label>
-              <input type="text" class="form-control" id="cc-expiration" placeholder="" required ng-model="shippingData.ccExpiration">
-              <div class="invalid-feedback">
-                Expiration date required
-              </div>
-            </div>
-
-            <div class="col-md-3">
-              <label for="cc-cvv" class="form-label">CVV</label>
-              <input type="text" class="form-control" id="cc-cvv" placeholder="" required ng-model="shippingData.ccCvv">
-              <div class="invalid-feedback">
-                Security code required
-              </div>
-            </div>
-          </div>
-
-          <hr class="my-4">
-
-          <button class="w-100 btn btn-primary btn-lg" type="submit">Complete Purchase</button>
-		  <br><br>
+          <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to Shipping</button>
+          <br><br>
         </form>
       </div>
     </div>
     <footer class="site-footer">
-                    <div class="container">
-                        <div class="row">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-12 me-auto">
+                    <em class="text-white d-block mb-4">Where to find us?</em>
+                    <strong class="text-white">
+                        <i class="bi-geo-alt me-2"></i>
+                        35GH+GXR, Kingston, Jamaica
+                    </strong>
+                    <ul class="social-icon mt-4">
+                        <li class="social-icon-item">
+                            <a href="#" class="social-icon-link bi-facebook"></a>
+                        </li>
+                        <li class="social-icon-item">
+                            <a href="#" target="_new" class="social-icon-link bi-twitter"></a>
+                        </li>
+                        <li class="social-icon-item">
+                            <a href="#" class="social-icon-link bi-whatsapp"></a>
+                        </li>
+                    </ul>
+                </div>
 
-                            <div class="col-lg-4 col-12 me-auto">
-                                <em class="text-white d-block mb-4">Where to find us?</em>
+                <div class="col-lg-3 col-12 mt-4 mb-3 mt-lg-0 mb-lg-0">
+                    <em class="text-white d-block mb-4">Contact</em>
+                    <p class="d-flex mb-1">
+                        <strong class="me-2">Phone:</strong>
+                        <a href="tel: 876-202-8055" class="site-footer-link">
+                            (+1)
+                            876 202 8055
+                        </a>
+                    </p>
+                    <p class="d-flex">
+                        <strong class="me-2">Email:</strong>
+                        <a href="mailto:info@KingstonCoffee.com" class="site-footer-link">
+                            hello@KingstonCoffee.com
+                        </a>
+                    </p>
+                </div>
 
-                                <strong class="text-white">
-                                    <i class="bi-geo-alt me-2"></i>
-                                    35GH+GXR, Kingston, Jamaica
-                                </strong>
+                <div class="col-lg-5 col-12">
+                    <em class="text-white d-block mb-4">Opening Hours.</em>
+                    <ul class="opening-hours-list">
+                        <li class="d-flex">
+                            Monday - Friday
+                            <span class="underline"></span>
+                            <strong>9:00 - 5:00</strong>
+                        </li>
+                        <li class="d-flex">
+                            Saturday
+                            <span class="underline"></span>
+                            <strong>11:00 - 4:30</strong>
+                        </li>
+                        <li class="d-flex">
+                            Sunday
+                            <span class="underline"></span>
+                            <strong>Closed</strong>
+                        </li>
+                    </ul>
+                </div>
 
-                                <ul class="social-icon mt-4">
-                                    <li class="social-icon-item">
-                                        <a href="#" class="social-icon-link bi-facebook">
-                                        </a>
-                                    </li>
-        
-                                    <li class="social-icon-item">
-                                        <a href="#" target="_new" class="social-icon-link bi-twitter">
-                                        </a>
-                                    </li>
-
-                                    <li class="social-icon-item">
-                                        <a href="#" class="social-icon-link bi-whatsapp">
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-
-                            <div class="col-lg-3 col-12 mt-4 mb-3 mt-lg-0 mb-lg-0">
-                                <em class="text-white d-block mb-4">Contact</em>
-
-                                <p class="d-flex mb-1">
-                                    <strong class="me-2">Phone:</strong>
-                                    <a href="tel: 876-202-8055" class="site-footer-link">
-                                        (+1) 
-                                        876 202 8055
-                                    </a>
-                                </p>
-
-                                <p class="d-flex">
-                                    <strong class="me-2">Email:</strong>
-
-                                    <a href="mailto:info@KingstonCoffee.com" class="site-footer-link">
-                                        hello@KingstonCoffee.com
-                                    </a>
-                                </p>
-                            </div>
-
-
-                            <div class="col-lg-5 col-12">
-                                <em class="text-white d-block mb-4">Opening Hours.</em>
-
-                                <ul class="opening-hours-list">
-                                    <li class="d-flex">
-                                        Monday - Friday
-                                        <span class="underline"></span>
-
-                                        <strong>9:00 - 5:00</strong>
-                                    </li>
-
-                                    <li class="d-flex">
-                                        Saturday
-                                        <span class="underline"></span>
-
-                                        <strong>11:00 - 4:30</strong>
-                                    </li>
-
-                                    <li class="d-flex">
-                                        Sunday
-                                        <span class="underline"></span>
-
-                                        <strong>Closed</strong>
-                                    </li>
-                                </ul>
-                            </div>
-
-                            <div class="col-lg-8 col-12 mt-4">
-                                 <p class="copyright-text mb-0">Copyright © Kingston Coffee 2025 
-                                    </p>
-                            </div>
-                    </div>
-        </footer>
+                <div class="col-lg-8 col-12 mt-4">
+                    <p class="copyright-text mb-0">Copyright © Kingston Coffee 2025
+                    </p>
+                </div>
+            </div>
+    </footer>
   </main>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 <script src="js/form-validation.js"></script>
-<script src="js/shipping.js"></script>
+<script src="js/billing.js"></script>
 
 </body>
 </html>
