--- a/public/billing.html
+++ b/public/billing.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="shippingApp" ng-controller="shippingController">
+<html lang="en" ng-app="billingApp" ng-controller="billingController">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
