--- a/public/shipping.html
+++ b/public/shipping.html
@@ -224,7 +224,7 @@
 
           <hr class="my-4">
 
-          <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
+          <button class="w-100 btn btn-primary btn-lg" type="submit">Submit Order</button>
           <br><br>
         </form>
       </div>
